fixed component goes off screen and modified header text

--- a/my-portfolio/src/pages/Home/Home.module.css
+++ b/my-portfolio/src/pages/Home/Home.module.css
@@ -54,16 +54,25 @@
 
 @media (min-width: 720px) {
   .header {
-    justify-content: flex-start;
+    justify-content: space-evenly;
   }
   .imgProfile {
     width: 300px;
-    margin-left: 120px;
-    /* margin-right: 80px; */
   }
   .titleHeader {
     width: 100%;
-    padding: 0 200px;
+    font-size: 38px;
+  }
+}
+@media (min-width: 1366px) {
+  .header {
+    justify-content: space-evenly;
+  }
+  .imgProfile {
+    width: 300px;
+  }
+  .titleHeader {
+    width: 50%;
     font-size: 38px;
   }
 }
